--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,37 @@
+/* Universal Selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Element selector */
 body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* deleted footer class and referenced <footer> tag instead */
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
+}
+
+/* Class selector */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +48,7 @@ body {
     color: #d9dcd6;
 }
 
-/* combining '.header div' and '.header div ul' functions into one function for new .nav-bar class */
+/* combining '.header div' and '.header div ul' functions into one property for new .nav-bar class */
 .nav-bar {
     margin-left: 25px;
     padding-top: 15px;
@@ -35,31 +59,12 @@ body {
     list-style-type: none;  
 }
 
-/* .header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-} */
-
 .nav-bar ul li { 
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
 
-p {
-    font-size: 16px;
-}
 
 .hero {
     height: 800px;
@@ -86,6 +91,25 @@ p {
     margin-left: 20px;
 }
 
+/* created .card class to consolidate 'search-engine-optimization, online-reputation-optimization, and social-media-marketing' classes into one cs property */
+.card {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.card img {
+    max-height: 200px;
+}
+
+.card h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -97,7 +121,37 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* Consolidated benefit-lead, benefit-brand and benefit-cost to one class */
+
+.benefit-tab {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-tab h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-tab img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* .header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.header div ul {
+    list-style-type: none;
+} */
+
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -143,26 +197,7 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-/* created .card class to consolidate 'search-engine-optimization, online-reputation-optimization, and social-media-marketing' classes into one cs property */
-.card {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.card img {
-    max-height: 200px;
-}
-
-.card h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+} */
 
 /* .search-engine-optimization {
     margin-bottom: 20px;
@@ -217,14 +252,3 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 } */
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
-}
